--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-cayman
 title: PANDA Workshop
 description: First Workshop on Performance-Data Analytics and Data-Management
