--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
-theme: jekyll-theme-cayman
+#theme: jekyll-theme-cayman
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+
 title: PANDA Workshop
 description: First Workshop on Performance-Data Analytics and Data-Management
