--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,6 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 title: PANDA Workshop
-description: The First International Workshop on Performance-Data Analytics and Data-Management
+description: The Second International Workshop on Performance-Data Analytics and Data-Management
 
 theme: jekyll-theme-slate
